@@ -1,11 +1,16 @@
 ----------------------------------------------------------------------
  OmegaT 5.7.0
 ----------------------------------------------------------------------
-  0 Enhancements
+  1 Enhancement
   0 Bug fixes
   1 Localisation updates
 ----------------------------------------------------------------------
 5.7.0 vs 5.6.0
+
+  Implemented requests:
+
+  - Improve support for markup in DSL dictionaries
+  https://sourceforge.net/p/omegat/feature-requests/1594
 
   Localisation Updates:
 
